# llm-inference-platform

./: .env.example  .gitignore  Makefile  docker-compose.yml  project.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/api_keys/: keys.yaml
learning/: README.md
learning/architecture/: frontier-lab-mapping.md  overview.md  request-lifecycle.md
learning/concepts/: 01-api-gateway.md  02-authentication.md  03-rate-limiting.md  04-request-queuing.md  05-model-serving.md  06-streaming-sse.md  07-usage-tracking.md  08-safety-layer.md  09-circuit-breaker.md  10-observability.md  11-health-checks.md  12-internet-exposure.md
learning/phases/: phase-1-basic-serving.md  phase-1-progress.md  phase-2-auth-and-limits.md  phase-2-progress.md  phase-3-queue-and-streaming.md  phase-4-observability.md  phase-5-safety.md  phase-6-hardening.md  phase-7-internet.md
scripts/: generate_api_key.py  seed_redis.py
src/: config.py  dependencies.py  main.py
src/api/: router.py
src/api/v1/: chat.py  health.py  models.py
src/api/v1/schemas/: chat.py  common.py  streaming.py
src/middleware/: auth.py  error_handler.py  logging_middleware.py  rate_limiter.py  request_id.py
src/models/: api_key.py  enums.py  usage.py
src/observability/: health.py  logging_config.py  metrics.py
src/services/: circuit_breaker.py  inference.py  queue.py  rate_limiter.py  safety.py  usage_tracker.py
src/utils/: sse.py  token_counter.py
tests/: conftest.py
tests/integration/: test_endpoints.py
